task(menu): start menu off, remove spring-native