@@ -1,16 +1,14 @@
 plugins {
 	id 'org.springframework.boot' version '2.4.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'org.springframework.experimental.aot' version '0.9.2'
 	id 'java'
 }
 
 group = 'io.github.roseyrosierose'
-version = '0.0.1-SNAPSHOT'
+version = '0.1.0-SNAPSHOT'
 sourceCompatibility = '8'
 
 repositories {
-	maven { url 'https://repo.spring.io/release' }
 	mavenCentral()
 }
 
@@ -19,6 +17,8 @@ configurations {
 }
 
 dependencies {
+	implementation 'com.budhash.cliche:cliche-shell:0.9.3'
+
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
@@ -27,13 +27,4 @@ dependencies {
 
 test {
 	useJUnitPlatform()
-}
-
-bootBuildImage {
-	builder = 'paketobuildpacks/builder:tiny'
-	environment = ['BP_NATIVE_IMAGE': 'true']
-}
-
-tasks.withType( JavaCompile ).configureEach {
-    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
 }
